[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,50 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-10-10 周一 23:00 ++1w> SCHEDULED: <2022-10-08 周六 18:00 ++1w>
+DEADLINE: <2022-11-14 周一 23:00 ++1w> SCHEDULED: <2022-11-12 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-09-30 周五 19:20]
+:LAST_REPEAT: [2022-11-05 周六 16:48]
 :END:
+- State "DONE"       from "TODO"       [2022-11-05 周六 16:48] \\
+  1. 处理战斗进度条卡顿问题
+     - 使用分帧进行优化
+  2. 接入火星登录系统
+     - 支持火星账号默认登录
+     - 支持唤醒时检测火星账号变化从而进行重登
+     - app.ini增加正式版字段
+  3. 最近账号使用keychain保存
+  ------------------------------
+  1. 学习github action使用方式
+  2. Catan项目接入CI/CD系统
+- State "DONE"       from "TODO"       [2022-10-31 周一 09:56] \\
+  1. 编写三份年度报告
+  2. 实现战斗录像功能:
+     1. 游戏外跳过的录像基于服务端协议实现
+     2. 斗法场录像基于本地协议录制实现
+     3. 其他情况基于协议回滚实现
+  ------------------------------
+  1. p5r真好玩, 学习全部停止了QWQ
+- State "DONE"       from "TODO"       [2022-10-24 周一 09:16] \\
+  1. 删除战斗系统中无效的ui组件
+  2. 初始化时设置3d粒子的读取目录
+  3. 巅峰竞技场支持浏览录像记录
+  4. 处理宵禁被踢出时的弹窗问题
+  -----------------------
+  1. catan支持地图编辑器, 默认地图的逻辑均基于地图编辑器实现
+  2. 再也不能吃汉堡王了, 每次吃它感觉都要犯痔疮
+- State "DONE"       from "TODO"       [2022-10-17 周一 10:51] \\
+  1. 支持头顶站位
+     - spine编辑器添加头顶位置设置
+     - 资源编辑器增加头顶位置
+     - 战斗模块支持创建头顶虚拟位置
+  2. 删除角色脚底阴影
+  3. 完成项目权限使用情况统计
+  4. 战斗模块初步接入录像系统
+  -----------------------
+  1. catan基本版在国庆就已经完成
+  2. 计划接下来接入航海家版的几个地图
 - State "DONE"       from "TODO"       [2022-09-30 周五 19:20] \\
   1. 接入防沉迷系统
   2. 支持战斗场景切换
@@ -828,12 +866,21 @@ DEADLINE: <2022-10-10 周一 23:00 ++1w> SCHEDULED: <2022-10-08 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-10-30 周日 23:00 ++1m> SCHEDULED: <2022-10-30 周日 09:00 ++1m>
+DEADLINE: <2022-11-30 周三 23:00 ++1m> SCHEDULED: <2022-11-30 周三 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-09-30 周五 19:31]
+:LAST_REPEAT: [2022-10-31 周一 11:02]
 :END:
+- State "DONE"       from "TODO"       [2022-10-31 周一 11:02] \\
+  工作上:
+  1. 处理审核版测试出现的问题
+  2. spine编辑器支持头顶位置
+  3. 支持本地战斗录像
+  4. 支持战斗协议回滚
+  5. 支持巅峰竞技场战报
+  生活上:
+  1. 卡坦基本版开发完毕
 - State "DONE"       from "TODO"       [2022-09-30 周五 19:31] \\
   工作上:
   - 接入公共系统
@@ -1155,11 +1202,20 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥                                                    :event:
-SCHEDULED: <2022-08-08 周一 17:27 ++1w>
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] github Catan项目接入构建系统                          :event:
+CLOSED: [2022-11-04 周五 17:35] SCHEDULED: <2022-11-02 周三 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-11-05 周六 16:51
+:END:
+*** DONE [#A] 减肥                                                  :event:
+CLOSED: [2022-11-05 周六 16:52] SCHEDULED: <2022-08-08 周一 17:27>
 :PROPERTIES:
 :LAST_REPEAT: [2022-08-06 周六 16:28]
+:ARCHIVE_TIME: 2022-11-05 周六 16:54
 :END:
+- State "DONE"       from "TODO"       [2022-08-06 周六 16:28] \\
+  减到70kg了, 暂时告一段落
 - State "DONE"       from "TODO"       [2022-08-06 周六 16:28] \\
   4.0km, 69.4kg
 - State "DONE"       from "TODO"       [2022-07-25 周一 11:07] \\
@@ -1199,24 +1255,6 @@ SCHEDULED: <2022-08-08 周一 17:27 ++1w>
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-** TODO [#A] 吉他学习                                                :event:
-SCHEDULED: <2022-07-17 周日 17:00 ++1w>
-:PROPERTIES:
-:LAST_REPEAT: [2022-07-13 周三 19:45]
-:END:
-- State "DONE"       from "TODO"       [2022-07-13 周三 19:45] \\
-  练习成都
-- State "DONE"       from "TODO"       [2022-06-13 周一 09:25] \\
-  am和弦练习, 虫儿飞练习
-- State "DONE"       from "TODO"       [2022-05-30 周一 09:12] \\
-  和弦转换, am和弦预习, 下次上课+10m
-- State "DONE"       from "TODO"       [2022-05-16 周一 13:12] \\
-  童年, 月亮代表我的心, 和弦
-- State "DONE"       from "TODO"       [2022-05-09 周一 09:33] \\
-  送别, 四季歌, 低音到高音音阶
-- State "DONE"       from "TODO"       [2022-04-18 周一 09:22] \\
-  爬格子, 音阶, 小星星, 生日快乐歌
-广州柿子音乐培训, 吉他弹唱课程12期(45分钟一对一), 每周日下午5点开始
 * Appointment
 * Project
 * Someday
