[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,13 +12,22 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-11-14 周一 23:00 ++1w> SCHEDULED: <2022-11-12 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2022-11-21 周一 23:00 ++1w> SCHEDULED: <2022-11-19 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-11-05 周六 16:48]
+:LAST_REPEAT: [2022-11-12 周六 17:50]
 :END:
+- State "DONE"       from "TODO"       [2022-11-12 周六 17:50] \\
+  1. 实现攻击者特效始终位于受击者之上的功能
+  2. 处理战斗中跳字的异常
+  3. 处理胜利动画覆盖死亡动画问题
+  4. 战斗日志改为纯数据输出
+  5. 处理角色抖动问题
+     - 初步判断是蓝图本身的问题
+  ------------------------------
+  1. Catan这次是真的彻底做完了
 - State "DONE"       from "TODO"       [2022-11-05 周六 16:48] \\
   1. 处理战斗进度条卡顿问题
      - 使用分帧进行优化
