--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,13 +12,40 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2022-11-21 周一 23:00 ++1w> SCHEDULED: <2022-11-19 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2022-12-12 周一 23:00 ++1w> SCHEDULED: <2022-12-10 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-11-12 周六 17:50]
+:LAST_REPEAT: [2022-12-02 周五 17:26]
 :END:
+- State "DONE"       from "TODO"       [2022-12-02 周五 17:26] \\
+  1. 完成主线战斗优化工单
+     - 世界地图优化
+     - 主线战斗界面调整
+  2. 修复布阵界面跳出无法开启战斗的bug
+  3. 将埋点用的数据全部存储到模型层, 方便埋点调用
+  -------------------------
+  1. 跟朋友进行一个跨越方尖碑的play
+  2. 阿峰出狱了
+- State "DONE"       from "TODO"       [2022-11-26 周六 17:25] \\
+  1. 完善文字战报系统
+  2. 处理切换手机后台可能导致的重连失败问题
+  3. 处理镇魔卫道录像播放导致未能正确领取圣物的问题
+  4. 处理密码错误也会触发维护提示的问题
+  5. 开发版支持异常报错提示
+  -------------------------
+  1. 神之天平, 新滴超人
+- State "DONE"       from "TODO"       [2022-11-19 周六 17:58] \\
+  1. 接入维护公告系统
+  2. 优化血量, 怒气再多场战斗中的开场表现
+  3. server.ini增加服务器id配置
+  4. 文字战报功能继续开发
+     1. 实现主界面
+     2. 将以前的协议记录转为文字战报的输入
+     3. 初步实现文字战报分析逻辑
+  -------------------------
+  1. 神之天平 gogogo
 - State "DONE"       from "TODO"       [2022-11-12 周六 17:50] \\
   1. 实现攻击者特效始终位于受击者之上的功能
   2. 处理战斗中跳字的异常
@@ -875,12 +902,33 @@ DEADLINE: <2022-11-21 周一 23:00 ++1w> SCHEDULED: <2022-11-19 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-11-30 周三 23:00 ++1m> SCHEDULED: <2022-11-30 周三 09:00 ++1m>
+DEADLINE: <2022-12-30 周五 23:00 ++1m> SCHEDULED: <2022-12-30 周五 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-10-31 周一 11:02]
+:LAST_REPEAT: [2022-12-02 周五 17:29]
 :END:
+- State "DONE"       from "TODO"       [2022-12-02 周五 17:29] \\
+  工作上:
+  1. 战斗系统优化
+     - 攻击者特效层级优化
+     - 战斗中数据放到通用模块中方便调用
+     - 战斗日志改为纯数据输出, 用于接入文字战报系统
+     - 处理角色抖动问题(证实是蓝图的错误)
+     - 处理胜利动画覆盖死亡动画问题
+     - 处理跳字残留问题
+     - 优化多场连续战斗生命值, 怒气的集成表现
+     - 处理主线战斗跳转后无法开始战斗的bug
+     - 处理镇魔卫道录像播放导致未能正确领取圣物的问题
+  2. 公共
+     - 接入维护公告
+     - 接入火星登录系统
+  3. 其他
+     - server.ini增加服务器id配置
+     - 处理在特定时机断开会导致无法登录的问题
+  生活上:
+  1. 减肥到140, 减不动了, 先这样吧, 维持定是跑步就好
+  2. Catan项目在github中接入自动构建
 - State "DONE"       from "TODO"       [2022-10-31 周一 11:02] \\
   工作上:
   1. 处理审核版测试出现的问题
@@ -1211,59 +1259,6 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] github Catan项目接入构建系统                          :event:
-CLOSED: [2022-11-04 周五 17:35] SCHEDULED: <2022-11-02 周三 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-05 周六 16:51
-:END:
-*** DONE [#A] 减肥                                                  :event:
-CLOSED: [2022-11-05 周六 16:52] SCHEDULED: <2022-08-08 周一 17:27>
-:PROPERTIES:
-:LAST_REPEAT: [2022-08-06 周六 16:28]
-:ARCHIVE_TIME: 2022-11-05 周六 16:54
-:END:
-- State "DONE"       from "TODO"       [2022-08-06 周六 16:28] \\
-  减到70kg了, 暂时告一段落
-- State "DONE"       from "TODO"       [2022-08-06 周六 16:28] \\
-  4.0km, 69.4kg
-- State "DONE"       from "TODO"       [2022-07-25 周一 11:07] \\
-  4.0km, 68.8kg
-- State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
-- 4.0km, 69.7kg
-- State "DONE"       from "TODO"       [2022-06-25 周六 17:08] \\
-  6.0km, 69.4kg
-- State "DONE"       from "TODO"       [2022-06-18 周六 14:00] \\
-  下雨, 70.0kg
-- State "DONE"       from "TODO"       [2022-06-11 周六 17:54] \\
-  下雨, 未跑, 69.95kg
-- State "DONE"       from "TODO"       [2022-06-06 周一 09:24] \\
-  4.0, 70.0kg, 下雨
-- State "DONE"       from "TODO"       [2022-05-30 周一 09:13] \\
-  3.5, 69.70kg, 下雨
-- State "DONE"       from "TODO"       [2022-05-23 周一 09:27] \\
-  4.5, 70.0kg, 下雨
-- State "DONE"       from "TODO"       [2022-05-16 周一 13:13] \\
-  4.0, 70.25kg 一直下雨
-- State "DONE"       from "TODO"       [2022-04-29 周五 15:02] \\
-  没跑, 痔疮没好
-- State "DONE"       from "TODO"       [2022-04-25 周一 09:55] \\
-  5.0->5.0, 71.0kg  痔疮犯了, 少跑了一次
-- State "DONE"       from "TODO"       [2022-04-18 周一 09:22] \\
-  5.0->5.0->5.0, 71.9kg
-- State "DONE"       from "TODO"       [2022-04-11 周一 09:15] \\
-  5.0->5.0->5.0, 72.6kg
-- State "DONE"       from "TODO"       [2022-04-01 周五 21:03] \\
-  5.0->5.0->5.0, 73.4kg
-- State "DONE"       from "TODO"       [2022-03-28 周一 09:28] \\
-  5.0->5.0->5.0, 74.0kg
-- State "DONE"       from "TODO"       [2022-03-21 周一 00:36] \\
-  4.5->5.0->2.5, 74.6kg
-- State "DONE"       from "TODO"       [2022-03-13 周日 23:23] \\
-  4.0->4.0->4.0, 75.4kg
-- State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
-  2.5->3.5->4.0, 76.1kg
-目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
 * Appointment
 * Project
 * Someday
