--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -111,12 +111,15 @@ CLOCK: [2022-03-07 周一 17:25]--[2022-03-07 周一 17:50] =>  0:25
 CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
-** TODO [#A] 完成每周周报                                             :work:
-SCHEDULED: <2022-11-18 周五 12:00 ++1w> DEADLINE: <2022-11-21 周一 12:00 ++1w>
+** TODO [#A] 完成每周周报                                            :work:
+SCHEDULED: <2022-12-09 周五 12:00 ++1w> DEADLINE: <2022-12-12 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-11-12 周六 17:48]
+:LAST_REPEAT: [2022-12-02 周五 17:29]
 :END:
+- State "DONE"       from "TODO"       [2022-12-02 周五 17:29]
+- State "DONE"       from "TODO"       [2022-11-26 周六 17:24]
+- State "DONE"       from "TODO"       [2022-11-19 周六 17:53]
 - State "DONE"       from "TODO"       [2022-11-12 周六 17:48]
 - State "DONE"       from "TODO"       [2022-11-05 周六 11:44]
 - State "DONE"       from "TODO"       [2022-10-31 周一 09:59]
@@ -210,46 +213,6 @@ SCHEDULED: <2022-11-18 周五 12:00 ++1w> DEADLINE: <2022-11-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 文字战报功能                                              :m8:
 SCHEDULED: <2022-10-26 周三 09:00>
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 真机施法抖动问题                                         :m8:
-CLOSED: [2022-11-04 周五 17:34] SCHEDULED: <2022-10-24 周一 09:56>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-05 周六 16:51
-:END:
-*** DONE [#A] 接入火星登录系统                                         :m8:
-CLOSED: [2022-11-04 周五 17:35] SCHEDULED: <2022-11-03 周四 14:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-05 周六 16:51
-:END:
-*** DONE [#A] 攻击者特效始终位于受击者上                               :m8:
-CLOSED: [2022-11-09 周三 17:00] SCHEDULED: <2022-10-28 周五 13:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-12 周六 17:52
-:END:
-*** DONE [#A] 跳字异常                                                 :m8:
-CLOSED: [2022-11-09 周三 17:00] SCHEDULED: <2022-11-08 周二 00:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-12 周六 17:52
-:END:
-*** DONE [#A] 分析角色抖动问题                                         :m8:
-CLOSED: [2022-11-12 周六 17:48] SCHEDULED: <2022-11-11 周五 15:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-12 周六 17:52
-:END:
-*** DONE [#A] 处理胜利动画覆盖死亡动画问题                             :m8:
-CLOSED: [2022-11-11 周五 20:37] SCHEDULED: <2022-11-11 周五 18:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-12 周六 17:52
-:END:
-*** DONE [#A] 战斗日志改为纯数据输出                                   :m8:
-CLOSED: [2022-11-12 周六 17:50] SCHEDULED: <2022-11-08 周二 17:49>
-:PROPERTIES:
-:ARCHIVE_TIME: 2022-11-12 周六 17:52
-:END:
-** TODO [#A] 接入维护公告                                              :m8:
-SCHEDULED: <2022-11-11 周五 20:37>
-** TODO [#A] 优化血量继承开场表现                                      :m8:
-SCHEDULED: <2022-11-12 周六 17:48>
 * Project
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
