--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,37 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-12-12 周一 23:00 ++1w> SCHEDULED: <2022-12-10 周六 18:00 ++1w>
+DEADLINE: <2022-12-26 周一 23:00 ++1w> SCHEDULED: <2022-12-24 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-12-02 周五 17:26]
+:LAST_REPEAT: [2022-12-20 周二 09:30]
 :END:
+- State "DONE"       from "TODO"       [2022-12-20 周二 09:30] \\
+  公司:
+  1. 处理pc唤醒后触发重连问题
+  2. 新增备战界面同阵容显示功能
+  居家:
+  1. 斗法场界面优化
+     - ui完成
+  2. 主界面切换卡顿
+     - 处理了第一次打开大量法宝时到其他界面的卡顿问题
+  -------------------------
+  1. 从周二开始居家, 爽模
+  2. 狠狠的grounded
+- State "DONE"       from "TODO"       [2022-12-12 周一 14:23] \\
+  1. 新增调查问卷功能
+  2. 战斗信息面板优化
+  3. 游玩审核包, 发现处理问题:
+     1. 处理邮箱拖动手感错误
+     2. 发现天赋树引导错误问题
+     3. 发现物品满导致的无限右键循环问题
+     4. 发现成长历程显示错误
+  4. 接入外网办公流程
+  -------------------------
+  1. grounded正式版感觉还不错, 不过大家好像都不是很想玩的样子
+  2. 矮人要塞学习中
+  3. webbed, 小品级平台跳跃游戏, 好评如潮还是有道理的
 - State "DONE"       from "TODO"       [2022-12-02 周五 17:26] \\
   1. 完成主线战斗优化工单
      - 世界地图优化
