--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -112,11 +112,13 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-12-09 周五 12:00 ++1w> DEADLINE: <2022-12-12 周一 12:00 ++1w>
+SCHEDULED: <2022-12-23 周五 12:00 ++1w> DEADLINE: <2022-12-26 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-12-02 周五 17:29]
+:LAST_REPEAT: [2022-12-20 周二 09:29]
 :END:
+- State "DONE"       from "TODO"       [2022-12-20 周二 09:29]
+- State "DONE"       from "TODO"       [2022-12-12 周一 13:47]
 - State "DONE"       from "TODO"       [2022-12-02 周五 17:29]
 - State "DONE"       from "TODO"       [2022-11-26 周六 17:24]
 - State "DONE"       from "TODO"       [2022-11-19 周六 17:53]
@@ -211,16 +213,48 @@ SCHEDULED: <2022-12-09 周五 12:00 ++1w> DEADLINE: <2022-12-12 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** DONE [#A] 文字战报功能                                              :m8:
-CLOSED: [2022-12-06 周二 11:31] SCHEDULED: <2022-10-26 周三 09:00>
-** TODO [#A] 战斗面板优化                                              :m8:
-SCHEDULED: <2022-12-05 周一 09:00>
-** TODO [#A] 接入调查问卷                                              :m8:
-SCHEDULED: <2022-12-06 周二 09:00>
-** TODO [#A] 处理审核包问题                                            :m8:
-SCHEDULED: <2022-12-07 周三 17:59>
+** TODO [#A] 文字战报功能                                              :m8:
+SCHEDULED: <2022-10-26 周三 09:00>
 ** TODO [#A] 处理战斗重开报错                                          :m8:
 SCHEDULED: <2022-12-07 周三 18:00>
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 战斗面板优化                                             :m8:
+CLOSED: [2022-12-12 周一 13:47] SCHEDULED: <2022-12-05 周一 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-12 周一 14:29
+:END:
+*** DONE [#A] 接入调查问卷                                             :m8:
+CLOSED: [2022-12-12 周一 13:47] SCHEDULED: <2022-12-06 周二 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-12 周一 14:29
+:END:
+*** DONE [#A] 处理审核包问题                                           :m8:
+CLOSED: [2022-12-12 周一 13:48] SCHEDULED: <2022-12-07 周三 17:59>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-12 周一 14:29
+:END:
+*** DONE [#A] 接入外网办公流程                                         :m8:
+CLOSED: [2022-12-12 周一 14:10] SCHEDULED: <2022-12-09 周五 14:10>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-12 周一 14:29
+:END:
+*** DONE [#A] 处理pc唤醒后触发重连问题                                 :m8:
+CLOSED: [2022-12-12 周一 14:31] SCHEDULED: <2022-12-12 周一 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-20 周二 09:34
+:END:
+*** DONE [#A] 体验审核包游戏, 发现问题                                 :m8:
+CLOSED: [2022-12-20 周二 09:28] SCHEDULED: <2022-12-08 周四 14:10>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-20 周二 09:34
+:END:
+*** DONE [#A] 备战界面同阵营数量表现                                   :m8:
+CLOSED: [2022-12-20 周二 09:29] SCHEDULED: <2022-12-13 周二 09:28>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-12-20 周二 09:34
+:END:
+** TODO [#A] 斗法场优化                                                :m8:
+SCHEDULED: <2022-12-14 周三 09:29>
 * Project
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
