--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,32 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-12-26 周一 23:00 ++1w> SCHEDULED: <2022-12-24 周六 18:00 ++1w>
+DEADLINE: <2023-01-23 周一 23:00 ++1w> SCHEDULED: <2023-01-21 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-12-20 周二 09:30]
+:LAST_REPEAT: [2023-01-16 周一 17:23]
 :END:
+- State "DONE"       from "TODO"       [2023-01-16 周一 17:23] \\
+  1. 完成通行证优化工单
+  2. 战斗速度调整(1, 2, 4)->(2, 4, 6)
+  3. 正式版屏蔽日志
+  4. 体验游戏(目前进度第九章)
+  --------------------------------
+  1. terraria - 灾厄持续火热进行中
+  2. 4070ti get
+  3. 用钢锯和矬子把机箱的显卡挡板锯掉了
+- State "DONE"       from "TODO"       [2023-01-10 周二 09:26] \\
+  1. 完成斗法场优化工单
+  2. 完成状态面板调整工单
+  3. 战斗埋点相关优化
+  4. 处理内测bug
+  5. 处理通行证界面优化工单(50%)
+  -------------------------
+  1. 新冠真的很痛苦, 发烧, 然后扁桃体发炎, 人要死了(前两周新冠修养)
+  2. grounded搞定, 我愿意称为小只狼
+  3. gtfo启动
+  4. terraria 灾厄 启动
 - State "DONE"       from "TODO"       [2022-12-20 周二 09:30] \\
   公司:
   1. 处理pc唤醒后触发重连问题
@@ -29,7 +49,7 @@ DEADLINE: <2022-12-26 周一 23:00 ++1w> SCHEDULED: <2022-12-24 周六 18:00 ++1
   2. 主界面切换卡顿
      - 处理了第一次打开大量法宝时到其他界面的卡顿问题
   -------------------------
-  1. 从周二开始居家, 爽模
+  1. 从周二开始居家, 爽摸
   2. 狠狠的grounded
 - State "DONE"       from "TODO"       [2022-12-12 周一 14:23] \\
   1. 新增调查问卷功能
@@ -927,12 +947,27 @@ DEADLINE: <2022-12-26 周一 23:00 ++1w> SCHEDULED: <2022-12-24 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-12-30 周五 23:00 ++1m> SCHEDULED: <2022-12-30 周五 09:00 ++1m>
+DEADLINE: <2023-01-29 周日 23:00 ++1m> SCHEDULED: <2023-02-01 周三 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-12-02 周五 17:29]
+:LAST_REPEAT: [2023-01-10 周二 09:39]
 :END:
+- State "DONE"       from "TODO"       [2023-01-10 周二 09:39] \\
+  工作上:
+  1. 完成主线战斗界面优化
+  2. 完成战斗中埋点优化
+  3. 完成真机上主菜单切换卡顿问题
+  4. 完成状态面板调整工单
+  5. 完成调查问卷工单
+  6. 完成斗法场优化工单
+  7. 处理真机后台断线问题
+  8. 测试, 修复审核版问题
+  9. 测试审核版在线更新流程
+  生活上:
+  1. 感染新冠休息两周, 症状为发烧三天, 然后扁桃体发炎5天, 伴随大量痰
+  2. grounded, 七日杀结束, 开始terraria 灾厄和gtfo
+  3. 准备购买回家车票
 - State "DONE"       from "TODO"       [2022-12-02 周五 17:29] \\
   工作上:
   1. 战斗系统优化
@@ -1285,5 +1320,10 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 * Appointment
+** DONE 购买4070ti                                                :shopping:
+CLOSED: [2023-01-10 周二 09:45]
+<2023-01-09 周一 09:45>
+** TODO 购买老家台式机零件                                       :shopping:
+<2023-01-10 周二 09:47>
 * Project
 * Someday
