--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -112,11 +112,16 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-12-23 周五 12:00 ++1w> DEADLINE: <2022-12-26 周一 12:00 ++1w>
+SCHEDULED: <2023-01-20 周五 12:00 ++1w> DEADLINE: <2023-01-23 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-12-20 周二 09:29]
+:LAST_REPEAT: [2023-01-16 周一 17:16]
 :END:
+- State "DONE"       from "TODO"       [2023-01-16 周一 17:16]
+- State "DONE"       from "TODO"       [2023-01-16 周一 17:16]
+- State "CANCELED"       from "TODO"       [2023-01-09 周一 09:24]
+- State "CANCELED"       from "TODO"       [2023-01-02 周一 09:24]  感染新冠暂停
+- State "CANCELED"       from "TODO"       [2022-12-26 周一 09:24]  感染新冠暂停
 - State "DONE"       from "TODO"       [2022-12-20 周二 09:29]
 - State "DONE"       from "TODO"       [2022-12-12 周一 13:47]
 - State "DONE"       from "TODO"       [2022-12-02 周五 17:29]
@@ -216,7 +221,6 @@ SCHEDULED: <2022-12-23 周五 12:00 ++1w> DEADLINE: <2022-12-26 周一 12:00 ++1
 ** TODO [#A] 文字战报功能                                              :m8:
 SCHEDULED: <2022-10-26 周三 09:00>
 ** TODO [#A] 处理战斗重开报错                                          :m8:
-SCHEDULED: <2022-12-07 周三 18:00>
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 战斗面板优化                                             :m8:
 CLOSED: [2022-12-12 周一 13:47] SCHEDULED: <2022-12-05 周一 09:00>
@@ -253,8 +257,14 @@ CLOSED: [2022-12-20 周二 09:29] SCHEDULED: <2022-12-13 周二 09:28>
 :PROPERTIES:
 :ARCHIVE_TIME: 2022-12-20 周二 09:34
 :END:
-** TODO [#A] 斗法场优化                                                :m8:
-SCHEDULED: <2022-12-14 周三 09:29>
+** DONE [#A] 斗法场优化                                                 :m8:
+CLOSED: [2022-12-25 周日 09:23] SCHEDULED: <2022-12-14 周三 09:29>
+** DONE [#A] 通行证界面优化                                            :m8:
+CLOSED: [2023-01-16 周一 17:16] SCHEDULED: <2023-01-05 周四 09:38>
+** DONE [#A] 战斗速率调整                                              :m8:
+CLOSED: [2023-01-10 周二 14:52] SCHEDULED: <2023-01-10 周二 13:00>
+** DONE [#A] 正式版屏蔽日志                                            :m8:
+CLOSED: [2023-01-16 周一 17:23] SCHEDULED: <2023-01-11 周三 17:22>
 * Project
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
