[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,21 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2023-01-23 周一 23:00 ++1w> SCHEDULED: <2023-01-21 周六 18:00 ++1w>
+DEADLINE: <2023-02-13 周一 23:00 ++1w> SCHEDULED: <2023-02-10 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-01-16 周一 17:23]
+:LAST_REPEAT: [2023-02-06 周一 20:40]
 :END:
+- State "DONE"       from "TODO"       [2023-02-06 周一 20:40] \\
+  1. 处理战斗面板天赋显示问题
+  2. 处理战报数据超限问题
+  3. 处理文字战报细节
+     - 状态显示
+     - 技能状态显示
+  --------------------------------
+  1. 速速上菜!!
+  2. 无主之地2和dt搞完
 - State "DONE"       from "TODO"       [2023-01-16 周一 17:23] \\
   1. 完成通行证优化工单
   2. 战斗速度调整(1, 2, 4)->(2, 4, 6)
@@ -947,12 +956,22 @@ DEADLINE: <2023-01-23 周一 23:00 ++1w> SCHEDULED: <2023-01-21 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2023-01-29 周日 23:00 ++1m> SCHEDULED: <2023-02-01 周三 09:00 ++1m>
+DEADLINE: <2023-03-01 周三 23:00 ++1m> SCHEDULED: <2023-03-01 周三 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-01-10 周二 09:39]
+:LAST_REPEAT: [2023-02-02 周四 13:42]
 :END:
+- State "DONE"       from "TODO"       [2023-02-02 周四 13:42] \\
+  工作上:
+  1. 完成通行证界面优化
+  2. 完成战斗速率调整
+  3. 正式版屏蔽网络日志
+  4. 修复内测服中出现的bug
+  生活上:
+  1. 过年过年
+  2. 在家装了台台式机, 帮李琦也装了一台
+  3. 过年搞完了灾厄和necesss
 - State "DONE"       from "TODO"       [2023-01-10 周二 09:39] \\
   工作上:
   1. 完成主线战斗界面优化
@@ -1320,9 +1339,6 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 * Appointment
-** DONE 购买4070ti                                                :shopping:
-CLOSED: [2023-01-10 周二 09:45]
-<2023-01-09 周一 09:45>
 ** TODO 购买老家台式机零件                                       :shopping:
 <2023-01-10 周二 09:47>
 * Project
