--- a/src/org/note/基金笔记.org
+++ b/src/org/note/基金笔记.org
@@ -16,6 +16,21 @@
 7. 长期收益稳定(1, 3, 5年内收益排名同类靠前就很不错)
 8. 尽量购买低估基金
  
+** 债券基金购买参数                                                  :买卖:
+写于<2023-02-12 周日>
+1. 年限大于3年
+2. 规模大于10亿
+3. 最近三年年化收益率高于5%
+4. 最近三年最大回撤不超过20%
+5. 牛逼的基金经理
+6. 利率下降中则购买短期债, 否则购买中长期债
+** 基金经理的分析法                                                  :策略:
+一言以蔽之, 管理大规模的基金, 业绩一直很好, 最好还在大公司
+根据以上我们可以用如下筛选条件:
+- 管理基金7年以上(一轮牛熊周期)
+- 生涯年化收益率15%以上
+- 管理资产规模超100亿元
+- 所在基金公司为国内top20
 ** 极简投资法                                                        :策略:
 写于<2023-02-11 周六>
 简述: 由5只基金组成的投资组合, 每年做一次动态平衡操作
@@ -45,3 +60,37 @@
 *** 什么东西适合定投
 - 宽指基金
 - 景气的行业基金
+
+* 基础知识
+** 基金的A, B, C类区别
+首先ABC类在投资管理上无任何区别, 由于B类很少见. 所以总的原则是长期选A, 短期选C
+- A类 :: 收取申购费, 不收销售服务费
+- B类 :: 收取赎回费, 不收销售服务费
+- C类 :: 按日提取销售服务费, 无其他费用
+
+** 债券基金分类
+- 指数债券基金 :: 跟踪债券指数, 主要是国债
+  - 增强型 :: 要求仓位中大部分购买债券指数, 剩余部分主动购买其他债券
+  - 非增强型
+- 主动债券基金
+  - 纯债基金 :: 100%投资债券
+    - 短期 :: 投资短期或者快到期的债券
+    - 中长期 :: 投资中长期债券
+  - 混合债券基金 :: 至少80%投资债券, 剩余可投资其他资产(比如股票)
+    - 一级债 :: 仅在一级市场购买股票, 主要是新打股和上市公司增发股票
+    - 二级债 :: 从二级市场购买股票
+  - 可转债基金 :: 投资上市公司发行的可转债, 收益和风险与股票类似
+
+** 基金基本概念
+*** 净值
+假设基金规模为10w元, 份额为10w份, 每份分红1.5元
+单位净值=基金规模/基金份额=1元
+累计净值=基金成立以来的所有分红+单位净值=2.5元
+*** 业绩表现
+业绩表现就是基金净值的走势, 通常用收益曲线表示, 一般需要和其将大盘以及其他同类基金进行比较,
+才能明确其表现
+*** 回撤
+是指某一时间段净值从最高点回落到最低点的幅度, 即亏损幅度, 通过此参数可以得知历史投资者遭遇的最大风险.
+同等收益下回撤越低越好
+*** 规模
+如果规模太小, 可能会出现管理费无法覆盖支出导致清盘. 所以尽量挑选规模在10亿以上的基金
