[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,13 +12,115 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2023-02-13 周一 23:00 ++1w> SCHEDULED: <2023-02-10 周五 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                    :event:
+DEADLINE: <2023-05-08 周一 23:00 ++1w> SCHEDULED: <2023-05-05 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-02-06 周一 20:40]
+:LAST_REPEAT: [2023-04-28 周五 16:10]
 :END:
+- State "DONE"       from "TODO"       [2023-04-28 周五 16:10] \\
+  1. 完成主线关卡控件加载优化
+  2. 完成法宝配置优化, 支持显示敌方法宝
+  3. 提供走格子玩法测试版入口, 支持单机模拟的部分功能
+  4. 走格子接入合批流程
+  5. 战斗性能优化:
+     - spine异步创建
+     - 状态图标合批处理
+     - 状态面板的属性, buff, 英雄头像合批处理
+     - 进度条英雄头像合批处理
+  ----------------------------
+  1. 每日杀戮尖塔联机和mindustry联机中
+- State "DONE"       from "TODO"       [2023-04-24 周一 15:17] \\
+  1. 设计实现走格子玩法框架
+     - 完成基本的地块渲染和角色渲染
+     - 支持延迟渲染
+     - 支持点击角色寻路
+  ----------------------------
+  1. 疯狂杀戮尖塔联机版, 感觉有点腻腻的
+- State "DONE"       from "TODO"       [2023-04-14 周五 17:42] \\
+  1. 战前录像结算和重放使用一套逻辑
+  2. 战前跳过使用标准流程而不是特殊处理
+  3. 角色位置相关设置全部使用全局坐标
+  4. 完成主线2.0主要框架(60%)
+  ----------------------------
+  1. 这周重玩了下挺进枪牢, 还是有点难
+  2. Boneraiser基本通关了, 又一款还不错的吸血鬼, 不过和土豆兄弟还是有差距
+- State "DONE"       from "TODO"       [2023-04-10 周一 09:40] \\
+  1. IOS布阵错位处理
+  2. 战斗回合请求优化
+  3. 主线表现优化(ani3动画播放, 蒙版范围等)
+  4. 主线2.0完成40%
+  ---------------------------
+  1. Ravenswatch很不错, 可惜没做完, 把demo当ea卖, 我服了
+- State "DONE"       from "TODO"       [2023-04-01 周六 17:48] \\
+  1. 处理主线2.0工单(25%)
+     - 导表处理完毕
+     - 管理器逻辑50%
+  2. 实现协议生成器
+  3. 使用生成器重新生成所有协议并校对
+  4. 每周外放维护
+  ---------------------------
+  1. grounded搞定了, 歇一阵子
+- State "DONE"       from "TODO"       [2023-03-27 周一 20:13] \\
+  1. 战斗中防御布阵代码合并
+  2. 支持防御布阵界面场景移动
+  3. 支持boss战特殊的血条显示机制
+  4. 调整战斗中buff动画的播放机制
+  ---------------------------
+  1. 暗黑4还是可以, 能玩
+- State "DONE"       from "TODO"       [2023-03-20 周一 15:25] \\
+  1. 完成主线美术资源替换和动画优化(目前有个ani3播放存在粒子被覆盖问题, 正在跟进)
+  2. 战斗代码优化及所有外放战斗中ui和本地管理器解耦
+  3. 3个排行榜玩法支持服务器战斗录像
+  4. 处理抵抗跳字问题(ui动画问题)
+  ---------------------------
+  1. 卧龙完美收官, 最终boss有点猛
+  2. grounded梅开二度
+- State "DONE"       from "TODO"       [2023-03-13 周一 20:00] \\
+  1. 处理战斗面板首次打开无法查看属性问题
+  2. 完成战斗结构优化工单
+  3. 热更法宝分解导表
+  4. 战斗断点续传的后续优化
+  5. 批改徒弟卷子
+  ---------------------------
+  1. 森林速速通关. 一个人真的不敢玩, 有点恐怖
+  2. 卧龙start
+- State "DONE"       from "TODO"       [2023-03-06 周一 20:47] \\
+  1. 战斗中实现断线重连功能
+  2. 实现战斗中数据分段传输
+  3. 优化布阵界面拖拽逻辑
+  4. 布阵界面使用复用滚动框
+  ----------------------------------
+  1. Patch Quest 启动
+  2. HiFi-Rush搞定, 除了死了之后必须看一遍过场动画以外, 其他都很完美
+- State "DONE"       from "TODO"       [2023-02-27 周一 19:31] \\
+  1. 完成精确战报工单
+  2. 处理monster_attr和boss_attr的混用问题
+  3. 优化战斗模块, 分离功能
+  ----------------------------------
+  1. chronicon完结, 后期变成刷刷刷游戏, 不想刷了
+  2. 森林, 启动!!!
+  3. HiFi-Rush, 额滴超人
+- State "DONE"       from "TODO"       [2023-02-20 周一 13:31] \\
+  1. 完成法宝优化工单
+  2. 拖拽容器支持惯性运动
+  3. 配合引擎组测试复用滚动框bug
+  --------------------------------
+  1. lovers完毕, 小游戏还阔以
+  2. 法狗暂停, 等待糖糕煮
+  3. chronicon启动, 魔性的本地多人暗黑like游戏, 刷起来还挺爽的
+  4. hellcard启动, 3个人一起玩了以下, 联机体验还阔以
+- State "DONE"       from "TODO"       [2023-02-13 周一 20:15] \\
+  1. 完成文字战报初版
+  2. 开始处理法宝优化工单
+     - 导表处理完毕
+     - 稀有度相关处理完毕
+  3. 拖拽容器支持灵敏度
+  4. 优化英雄山界面显示
+  --------------------------------
+  1. lovers in a dangerous spacetime启动
+  2. 泰拉法狗启动
 - State "DONE"       from "TODO"       [2023-02-06 周一 20:40] \\
   1. 处理战斗面板天赋显示问题
   2. 处理战报数据超限问题
@@ -956,12 +1058,68 @@ DEADLINE: <2023-02-13 周一 23:00 ++1w> SCHEDULED: <2023-02-10 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2023-03-01 周三 23:00 ++1m> SCHEDULED: <2023-03-01 周三 09:00 ++1m>
+DEADLINE: <2023-06-01 周四 23:00 ++1m> SCHEDULED: <2023-06-01 周四 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-02-02 周四 13:42]
+:LAST_REPEAT: [2023-04-28 周五 17:24]
 :END:
+- State "DONE"       from "TODO"       [2023-04-28 周五 17:24] \\
+  工作上:
+  1. 主线2.0工单完成50%
+  2. 处理战斗中存在多个坐标系统导致的错位问题, 统一为全局坐标
+     - 处理IOS刘海导致的布阵错位问题
+  3. 主线动画播放优化, 支持ani3关键帧播放
+  4. 实现网络协议生成器, 实现协议文件的增删改自动化
+  5. 战斗优化:
+     - 战前跳过使用标准流程而不是特殊处理
+     - 战前录像结算和重放使用一套逻辑
+  6. 支持走格子玩法:
+     - 支持基本元素渲染
+     - 支持延迟渲染
+     - 支持角色寻路
+     - 支持动态合批
+  7. 性能优化
+     - 主线界面图标采用延迟加载
+     - 战斗spine异步创建
+     - 战斗状态图标合批处理
+     - 战斗状态面板的属性, buff, 英雄头像合批处理
+     - 战斗进度条英雄头像合批处理
+  生活上:
+  1. 乏善可陈, 玩了几个小游戏, 没有大作
+- State "DONE"       from "TODO"       [2023-04-01 周六 17:51] \\
+  工作上:
+  1. 战斗模块整体优化
+     - 重连代码优化
+     - 管理器和指令处理之间的逻辑关系优化
+     - 战斗中和本地管理器解耦
+     - 防御场景代码整合
+  2. 支持服务器录像
+  3. 调整布阵界面拖拽的逻辑判定
+  4. 处理抵抗跳字动画播放无效问题
+  5. 调整buff动画播放逻辑, 相同buff进行合并播放
+  6. 新增boss战信息条特殊规则
+  7. 每周外放维护
+  生活上:
+  1. grounded, 卧龙结档
+- State "DONE"       from "TODO"       [2023-03-01 周三 17:01] \\
+  工作上:
+  1. 战斗面板支持显示天赋信息
+  2. 处理协议错误
+     - 战报数据整形溢出错误, 改为字符串
+  3. 法宝养成相关优化
+     - 删除等阶核心概念, 优化界面
+  4. 支持详细战报数据, 细化到每种类型伤害的具体数据
+  5. 完成文字战报初版
+  6. 拖拽容器支持灵敏度和惯性运动
+  7. 优化布阵界面拖拽逻辑
+  8. 战斗模块优化(未完成)
+     - 将部分逻辑迁移至组件中
+     - 优化目录结构
+  生活上:
+  1. 正式进入工作节奏
+  2. 将储蓄投入证券市场
+  3. 玩了hellcard, chronicon, lovers, 速速上菜等游戏
 - State "DONE"       from "TODO"       [2023-02-02 周四 13:42] \\
   工作上:
   1. 完成通行证界面优化
@@ -1301,45 +1459,9 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 每周学习晨星网投资教程一篇 [1/1]                       :event:
-DEADLINE: <2022-06-19 周日 23:59 ++1w> SCHEDULED: <2022-06-20 周一 09:00 ++1w>
-:PROPERTIES:
-:STYLE:    habit
-:LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-05-11 周三 15:07]
-:END:
-- State "DONE"       from "TODO"       [2022-05-11 周三 15:07]
-- State "DONE"       from "TODO"       [2022-04-18 周一 12:10]
-- State "DONE"       from "TODO"       [2022-04-12 周二 20:41]
-- State "DONE"       from "TODO"       [2022-04-02 周六 20:49]
-- State "DONE"       from "TODO"       [2022-03-28 周一 11:40]
-- State "DONE"       from "TODO"       [2022-03-21 周一 10:50]
-- State "DONE"       from "TODO"       [2022-03-14 周一 10:39]
-- State "DONE"       from "TODO"       [2022-03-07 周一 15:39]
-:LOGBOOK:
-CLOCK: [2022-03-28 周一 11:15]--[2022-03-28 周一 11:40] =>  0:25
-CLOCK: [2022-03-07 周一 15:27]--[2022-03-07 周一 15:39] =>  0:12
-CLOCK: [2022-03-07 周一 14:57]--[2022-03-07 周一 15:22] =>  0:25
-CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
-:END:
-- State "DONE"       from "TODO"       [2022-03-06 周日 23:20]
-- State "DONE"       from "TODO"       [2022-02-28 周一 09:20]
-- [X] 第一篇
-** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
-:PROPERTIES:
-:STYLE:    habit
-:BLOCKER:  olp("live.org" "Next Action/每周学习晨星网投资教程一篇")
-:LOGGING: logrepeat DONE(@)
-:END:
-** WAIT [#A] 自学unity                                              :event:
-:PROPERTIES:
-:STYLE:    habit
-:LOGGING: logrepeat DONE(@)
-:BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
-:LAST_REPEAT: [2022-01-22 周六 15:07]
-:END:
+** TODO [#A] 办理社保医保转移手续                                   :event:
+SCHEDULED: <2023-04-11 周二 15:00>
+医保必须在社保办结之后在进行转移
 * Appointment
-** TODO 购买老家台式机零件                                       :shopping:
-<2023-01-10 周二 09:47>
 * Project
 * Someday
