--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -111,142 +111,63 @@ CLOCK: [2022-03-07 周一 17:25]--[2022-03-07 周一 17:50] =>  0:25
 CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
-** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2023-01-20 周五 12:00 ++1w> DEADLINE: <2023-01-23 周一 12:00 ++1w>
-:PROPERTIES:
-:STYLE:    habit
-:LAST_REPEAT: [2023-01-16 周一 17:16]
-:END:
-- State "DONE"       from "TODO"       [2023-01-16 周一 17:16]
-- State "DONE"       from "TODO"       [2023-01-16 周一 17:16]
-- State "CANCELED"       from "TODO"       [2023-01-09 周一 09:24]
-- State "CANCELED"       from "TODO"       [2023-01-02 周一 09:24]  感染新冠暂停
-- State "CANCELED"       from "TODO"       [2022-12-26 周一 09:24]  感染新冠暂停
-- State "DONE"       from "TODO"       [2022-12-20 周二 09:29]
-- State "DONE"       from "TODO"       [2022-12-12 周一 13:47]
-- State "DONE"       from "TODO"       [2022-12-02 周五 17:29]
-- State "DONE"       from "TODO"       [2022-11-26 周六 17:24]
-- State "DONE"       from "TODO"       [2022-11-19 周六 17:53]
-- State "DONE"       from "TODO"       [2022-11-12 周六 17:48]
-- State "DONE"       from "TODO"       [2022-11-05 周六 11:44]
-- State "DONE"       from "TODO"       [2022-10-31 周一 09:59]
-- State "DONE"       from "TODO"       [2022-10-24 周一 09:22]
-- State "DONE"       from "TODO"       [2022-10-17 周一 10:56]
-- State "DONE"       from "TODO"       [2022-09-30 周五 19:20]
-- State "DONE"       from "TODO"       [2022-09-24 周六 19:03]
-- State "DONE"       from "TODO"       [2022-09-24 周六 19:03]
-- State "DONE"       from "TODO"       [2022-09-19 周一 09:20]
-- State "DONE"       from "TODO"       [2022-09-13 周二 09:16]
-- State "DONE"       from "TODO"       [2022-09-05 周一 09:38]
-- State "DONE"       from "TODO"       [2022-08-27 周六 18:22]
-- State "DONE"       from "TODO"       [2022-08-27 周六 18:18]
-- State "DONE"       from "TODO"       [2022-08-20 周六 17:12]
-- State "DONE"       from "TODO"       [2022-08-20 周六 17:12]
-- State "DONE"       from "TODO"       [2022-08-20 周六 17:12]
-- State "DONE"       from "TODO"       [2022-08-15 周一 12:48]
-- State "DONE"       from "TODO"       [2022-08-06 周六 16:30]
-- State "DONE"       from "TODO"       [2022-08-01 周一 17:27]
-- State "DONE"       from "TODO"       [2022-07-23 周六 17:01]
-- State "DONE"       from "TODO"       [2022-07-18 周一 10:44]
-- State "DONE"       from "TODO"       [2022-07-09 周六 14:45]
-- State "DONE"       from "TODO"       [2022-07-04 周一 09:41]
-- State "DONE"       from "TODO"       [2022-06-25 周六 14:25]
-- State "DONE"       from "TODO"       [2022-06-18 周六 19:13]
-- State "DONE"       from "TODO"       [2022-06-11 周六 17:53]
-- State "DONE"       from "TODO"       [2022-06-06 周一 10:58]
-- State "DONE"       from "TODO"       [2022-05-30 周一 09:17]
-- State "DONE"       from "TODO"       [2022-05-23 周一 09:34]
-- State "DONE"       from "TODO"       [2022-05-14 周六 19:28]
-- State "DONE"       from "TODO"       [2022-05-07 周六 20:37]
-- State "DONE"       from "TODO"       [2022-04-29 周五 17:14]
-- State "DONE"       from "TODO"       [2022-04-25 周一 09:51]
-- State "DONE"       from "TODO"       [2022-04-16 周六 16:21]
-- State "DONE"       from "TODO"       [2022-04-09 周六 13:55]
-- State "DONE"       from "TODO"       [2022-04-01 周五 17:22]
-- State "DONE"       from "TODO"       [2022-03-26 周六 16:22]
-- State "DONE"       from "TODO"       [2022-03-19 周六 16:27]
-- State "DONE"       from "TODO"       [2022-03-11 周五 20:56]
-- State "DONE"       from "TODO"       [2022-03-05 周六 17:02]
-- State "DONE"       from "TODO"       [2022-02-26 周六 16:40]
-- State "DONE"       from "TODO"       [2022-02-19 周六 15:46]
-- State "DONE"       from "TODO"       [2022-02-14 周一 09:45]
-- State "DONE"       from "TODO"       [2022-01-27 周四 16:42]
-- State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
-- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
-- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
-- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
-- State "DONE"       from "TODO"       [2022-01-15 周六 17:21]
-- State "DONE"       from "TODO"       [2022-01-08 周六 16:50]
-- State "DONE"       from "TODO"       [2022-01-04 周二 11:10]
-- State "DONE"       from "TODO"       [2021-12-25 周六 15:47]
-- State "DONE"       from "TODO"       [2021-12-20 周一 09:00]
-- State "DONE"       from "TODO"       [2021-12-11 周六 16:38]
-- State "DONE"       from "TODO"       [2021-12-11 周六 16:34]
-- State "DONE"       from "TODO"       [2021-12-04 周六 16:13]
-- State "DONE"       from "TODO"       [2021-11-27 周六 16:51]
-- State "DONE"       from "TODO"       [2021-11-20 周六 16:54]
-- State "DONE"       from "TODO"       [2021-11-13 周六 16:44]
-- State "DONE"       from "TODO"       [2021-11-08 周一 09:19]
-- State "DONE"       from "TODO"       [2021-11-01 周一 11:28]
-- State "DONE"       from "TODO"       [2021-10-25 周一 09:32]
-- State "DONE"       from "TODO"       [2021-10-16 周六 17:17]
-- State "DONE"       from "TODO"       [2021-10-09 周六 16:46]
-- State "DONE"       from "TODO"       [2021-09-30 周四 18:06]
-- State "DONE"       from "TODO"       [2021-09-27 周一 09:27]
-- State "DONE"       from "TODO"       [2021-09-19 周日 19:44]
-- State "DONE"       from "TODO"       [2021-09-11 周六 15:42]
-- State "DONE"       from "TODO"       [2021-09-04 周六 16:04]
-- State "DONE"       from "TODO"       [2021-08-28 周六 17:09]
-- State "DONE"       from "TODO"       [2021-08-21 周六 16:25]
-- State "DONE"       from "TODO"       [2021-08-07 周六 17:17]
-- State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
-- State "DONE"       from "TODO"       [2021-07-24 周六 15:39]
-- State "DONE"       from "TODO"       [2021-07-17 周六 17:16]
-- State "DONE"       from "TODO"       [2021-07-10 周六 17:35]
-- State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
-- State "DONE"       from "TODO"       [2021-06-26 周六 17:19]
-- State "DONE"       from "TODO"       [2021-06-20 周日 10:25]
-- State "DONE"       from "TODO"       [2021-06-11 周五 17:48]
-- State "DONE"       from "TODO"       [2021-06-07 周一 10:33]
-- State "DONE"       from "TODO"       [2021-05-29 周六 18:22]
-- State "DONE"       from "TODO"       [2021-05-24 周一 11:00]
-- State "DONE"       from "TODO"       [2021-05-16 周日 23:48]
-- State "DONE"       from "TODO"       [2021-05-09 周日 23:58]
-- State "DONE"       from "TODO"       [2021-05-03 周一 22:50]
-- State "DONE"       from "TODO"       [2021-04-25 周日 21:56]
-- State "DONE"       from "TODO"       [2021-04-17 周六 23:29]
-- State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
-- State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
-- State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** DONE [#A] 文字战报功能                                              :m8:
-CLOSED: [2023-02-08 周三 20:39] SCHEDULED: <2022-10-26 周三 09:00>
 ** TODO [#A] 处理战斗重开报错                                          :m8:
-** TODO [#A] 战斗中重连优化                                            :m8:
+** TODO [#C] 和公共对接新版蓝图编辑器                                  :m8:
 SCHEDULED: <2023-01-31 周二 09:00>
-** TODO [#A] 处理真机运行中报错问题                                    :m8:
-SCHEDULED: <2023-01-31 周二 09:00>
-** WAIT [#C] 和公共对接新版蓝图编辑器                                  :m8:
-SCHEDULED: <2023-01-31 周二 09:00>
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 战斗面板显示天赋信息                                     :m8:
-CLOSED: [2023-02-06 周一 15:05] SCHEDULED: <2023-01-31 周二 09:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2023-02-06 周一 20:39
-:END:
-*** DONE [#A] 处理战报数据超限问题                                     :m8:
-CLOSED: [2023-02-06 周一 15:04] SCHEDULED: <2023-02-01 周三 09:02>
-:PROPERTIES:
-:ARCHIVE_TIME: 2023-02-06 周一 20:39
-:END:
-** TODO [#A] 拖拽容器灵敏度和弹性运动支持                              :m8:
-SCHEDULED: <2023-02-09 周四 13:51>
-** TODO [#A] 法宝养成相关优化                                          :m8:
-SCHEDULED: <2023-02-10 周五 13:51>
 ** TODO [#A] 文字战报(分段初始化, 复用滚动框)优化                      :m8:
 SCHEDULED: <2023-02-09 周四 13:52>
-** TODO [#A] 战报数据详细化(每个技能的伤害, 治疗等等)                  :m8:
-SCHEDULED: <2023-02-08 周三 13:53>
+** TODO [#A] 阵容定位调整和特殊站位支持                                :m8:
+SCHEDULED: <2023-03-21 周二 09:00>
+** TODO [#A] 战斗协议精简                                              :m8:
+SCHEDULED: <2023-03-21 周二 09:00>
+** WAIT [#A] 主线功能2.0                                               :m8:
+SCHEDULED: <2023-03-27 周一 09:00>
+- State "WAIT"       from "TODO"       [2023-04-10 周一 09:16] \\
+  1. 先制作地图编辑器, 初步搞定之后再来做这个
+** WAIT [#A] 制作地图编辑器                                            :m8:
+SCHEDULED: <2023-04-10 周一 09:16>
+- State "WAIT"       from "TODO"       [2023-04-11 周二 16:55] \\
+  暂时无制作需求
+** TODO [#A] 走格子玩法                                                :m8:
+SCHEDULED: <2023-04-18 周二 00:00>
 * Project
+** SCH [#B] 带徒弟                                                     :m8:
+SCHEDULED: <2023-03-01 周三 09:00> DEADLINE: <2023-04-01 周六 00:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 第一次面谈
+CLOSED: [2023-03-01 周三 14:25]
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+简单的聊了一下, 询问了一下徒弟的基本情况, 解答了公司制度上的一些问题(加班, 请假等). 介绍了项目组的情况还有一些日常规范.
+由于只是简单的聊了一下, 对徒弟的能力情况, 态度情况目前没有了解. 目前只能得到沟通能力正常的结论.
+*** DONE svn作业批改
+CLOSED: [2023-03-08 周三 20:48] SCHEDULED: <2023-03-15 周三 14:25>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE python大作业批改
+CLOSED: [2023-03-10 周五 10:53] SCHEDULED: <2023-03-08 周三 20:48>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE ui大作业批改
+CLOSED: [2023-03-18 周六 20:31] SCHEDULED: <2023-03-13 周一 20:31>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** TODO 第二次面谈
+SCHEDULED: <2023-03-10 周五 20:31>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 第二次面谈
+*** WAIT 结束面谈
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:END:
 * Someday
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
 ** 学习《Lua程序设计》                                       :learn:future:
