[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,46 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2023-05-08 周一 23:00 ++1w> SCHEDULED: <2023-05-05 周五 18:00 ++1w>
+DEADLINE: <2023-06-05 周一 23:00 ++1w> SCHEDULED: <2023-06-02 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-04-28 周五 16:10]
+:LAST_REPEAT: [2023-05-27 周六 17:28]
 :END:
+- State "DONE"       from "TODO"       [2023-05-27 周六 17:28] \\
+  1. 调整buff蓝图播放机制:
+     - 支持条件表达式, 同个buff同时播放多个蓝图
+     - 使用命名_t标记透明的蓝图
+  2. 彻底删除战斗本地录像模块
+  3. 支持布阵换位特效
+  4. 优化播放录像时中途退出的效果, 根据情况返回不同的界面
+  5. 完成走格子2.0工单
+  ---------------------------
+  1. totk真的是有点上头, 玩疯了
+- State "DONE"       from "TODO"       [2023-05-19 周五 19:23] \\
+  1. 优化走格子玩法结构, 大部分控件由代码生成改为ui编辑器生成
+  2. 实现走格子2.0工单内容:
+     1. 单位名称, 置灰
+     2. 新的交互类型
+  3. 镇魔卫道奇遇窗口通用化
+  4. 处理外放bug
+  ---------------------------
+  1. 怪物火车, 永远的神
+- State "DONE"       from "TODO"       [2023-05-12 周五 20:17] \\
+  1. 处理长时间切出app导致战斗无法重连的问题
+  2. 法术支持同排中心位置
+  3. 文字战报支持动态大小, 处理错位问题
+  4. 基本完成走格子玩法功能
+  ---------------------------
+  1. monstertrain真好玩
+  2. TOTK也很不错
+- State "DONE"       from "TODO"       [2023-05-08 周一 09:20] \\
+  1. 对接支持异步的蓝图, 战斗系统默认蓝图动作全部异步加载
+  2. 处理录像播放时退出表现不正确的问题
+  3. 每周外放维护
+  ----------------------------
+  1. monster train, 很不错的卡牌肉鸽
+  2. 塞尔达王国之泪, 永远滴神
 - State "DONE"       from "TODO"       [2023-04-28 周五 16:10] \\
   1. 完成主线关卡控件加载优化
   2. 完成法宝配置优化, 支持显示敌方法宝
@@ -1459,8 +1493,12 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 办理社保医保转移手续                                   :event:
-SCHEDULED: <2023-04-11 周二 15:00>
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 办理社保医保转移手续                                  :event:
+CLOSED: [2023-05-19 周五 19:23] SCHEDULED: <2023-04-11 周二 15:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2023-05-27 周六 17:33
+:END:
 医保必须在社保办结之后在进行转移
 * Appointment
 * Project
