--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -12,13 +12,34 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2023-06-05 周一 23:00 ++1w> SCHEDULED: <2023-06-02 周五 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2023-06-19 周一 23:00 ++1w> SCHEDULED: <2023-06-16 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-05-27 周六 17:28]
+:LAST_REPEAT: [2023-06-10 周六 16:26]
 :END:
+- State "DONE"       from "TODO"       [2023-06-10 周六 16:26] \\
+  1. 支持应用使用拖拽方式打开日志文件
+     - 支持正则表达式搜索
+     - 支持读取解密日志
+     - 支持按模块, 按日志级别查看日志
+  2. 支持特殊站位
+     - 目前仅英雄山和日常boss接入
+  3. 支持防守布阵界面里英雄站位根据情况进行位移
+     - 仅支持战棋和竞技场, 帮派尚未支持
+  4. 支持反转的防守布阵界面
+  ---------------------------
+  1. 这周居然玩起了桌游模拟器, 泪目
+- State "DONE"       from "TODO"       [2023-06-03 周六 15:46] \\
+  1. 处理宝塔层数显示错乱的bug
+  2. 处理战棋弹窗相关bug
+  3. 支持战斗布阵上阵底图
+  4. 网格新增重置大小的功能
+  5. 处理任务弹窗spine动画受到全局加速影响的问题
+  6. 完成文字资源检查工具, 用来扫描项目中使用的文字资源
+  ---------------------------
+  1. 塞完了, 一阵空虚袭来, 只能说有50%的概率获得年度游戏了, 剩下的要看星空给不给力了
 - State "DONE"       from "TODO"       [2023-05-27 周六 17:28] \\
   1. 调整buff蓝图播放机制:
      - 支持条件表达式, 同个buff同时播放多个蓝图
@@ -1092,12 +1113,27 @@ DEADLINE: <2023-06-05 周一 23:00 ++1w> SCHEDULED: <2023-06-02 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2023-06-01 周四 23:00 ++1m> SCHEDULED: <2023-06-01 周四 09:00 ++1m>
+DEADLINE: <2023-07-01 周六 23:00 ++1m> SCHEDULED: <2023-07-01 周六 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-04-28 周五 17:24]
+:LAST_REPEAT: [2023-06-03 周六 15:53]
 :END:
+- State "DONE"       from "TODO"       [2023-06-03 周六 15:53] \\
+  战斗相关:
+  1. 战斗中蓝图使用的资源均采用异步创建
+  2. 处理长时间切出app导致战斗无法重连的问题
+  3. 法术编辑器支持同排中心位置
+  4. 优化buff蓝图播放机制:
+     - 支持条件表达式, 一个buff可以根据数据的不同表现出多种形态
+  5. 优化播放战斗录像时退出返回的界面, 尽量返回原界面
+  6. 支持布阵换位特效, 将要放下的位置高亮提示
+  7. 文字战报使用复用滚动框
+  8. 彻底删除战斗本地录像模块
+  新玩法:
+  1. 完成战棋玩法(1.0, 2.0)两个工单
+  生活上:
+  1. 怪物火车和塞尔达王国之泪, 都是神作
 - State "DONE"       from "TODO"       [2023-04-28 周五 17:24] \\
   工作上:
   1. 主线2.0工单完成50%
@@ -1493,13 +1529,6 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 办理社保医保转移手续                                  :event:
-CLOSED: [2023-05-19 周五 19:23] SCHEDULED: <2023-04-11 周二 15:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2023-05-27 周六 17:33
-:END:
-医保必须在社保办结之后在进行转移
 * Appointment
 * Project
 * Someday
