[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,12 +13,25 @@
 * Inbox
 * Next Action
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2023-06-19 周一 23:00 ++1w> SCHEDULED: <2023-06-16 周五 18:00 ++1w>
+DEADLINE: <2023-07-03 周一 23:00 ++1w> SCHEDULED: <2023-06-30 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2023-06-10 周六 16:26]
+:LAST_REPEAT: [2023-06-27 周二 10:24]
 :END:
+- State "DONE"       from "TODO"       [2023-06-27 周二 10:24] \\
+  1. 全域文本替换(ui, 脚本, 导表), 修复不合规的文本
+  2. 战盟pc端接入游戏
+  3. buff蓝图播放支持几个场地位置(阵型中心, 战场中心等)
+  4. 处理维护时出现的bug
+  -------------------------------------
+  1. 这下真的要run喽
+- State "DONE"       from "TODO"       [2023-06-19 周一 10:10] \\
+  1. 完成界面切换过渡动画工单
+  2. 拖拽日志支持utf-8解码
+  3. 完成新人手册工单
+  -----------------------------------
+  1. 只能说一句, 等星空
 - State "DONE"       from "TODO"       [2023-06-10 周六 16:26] \\
   1. 支持应用使用拖拽方式打开日志文件
      - 支持正则表达式搜索
